added all notebooks

--- a/BEGINNER/beginner_eda.ipynb
+++ b/BEGINNER/beginner_eda.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,206 +17,40 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
     "\n",
     "pd.set_option('display.max_columns', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"train_data.csv\")"
+    "df = pd.read_csv('train_data.csv')\n",
+    "X_test = pd.read_csv('test_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>patient_id</th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>last_name</th>\n",
-       "      <th>age</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>address</th>\n",
-       "      <th>city</th>\n",
-       "      <th>state</th>\n",
-       "      <th>postcode</th>\n",
-       "      <th>diastolic_bp</th>\n",
-       "      <th>systolic_bp</th>\n",
-       "      <th>heart_rate</th>\n",
-       "      <th>respiratory_rate</th>\n",
-       "      <th>oxygen_saturation</th>\n",
-       "      <th>state_label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2025-01-01 19:00:00</td>\n",
-       "      <td>b317e7ee-8af7-3e9c-3e0f-646395b8c81a</td>\n",
-       "      <td>Howard613</td>\n",
-       "      <td>Altenwerth646</td>\n",
-       "      <td>42</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2/58 JASPER ROAD</td>\n",
-       "      <td>BENTLEIGH</td>\n",
-       "      <td>VIC</td>\n",
-       "      <td>3204</td>\n",
-       "      <td>79.9</td>\n",
-       "      <td>118.3</td>\n",
-       "      <td>74.4</td>\n",
-       "      <td>17.1</td>\n",
-       "      <td>98.6</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2025-01-01 19:00:05</td>\n",
-       "      <td>b317e7ee-8af7-3e9c-3e0f-646395b8c81a</td>\n",
-       "      <td>Howard613</td>\n",
-       "      <td>Altenwerth646</td>\n",
-       "      <td>42</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2/58 JASPER ROAD</td>\n",
-       "      <td>BENTLEIGH</td>\n",
-       "      <td>VIC</td>\n",
-       "      <td>3204</td>\n",
-       "      <td>79.2</td>\n",
-       "      <td>119.0</td>\n",
-       "      <td>75.8</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2025-01-01 19:00:10</td>\n",
-       "      <td>b317e7ee-8af7-3e9c-3e0f-646395b8c81a</td>\n",
-       "      <td>Howard613</td>\n",
-       "      <td>Altenwerth646</td>\n",
-       "      <td>42</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2/58 JASPER ROAD</td>\n",
-       "      <td>BENTLEIGH</td>\n",
-       "      <td>VIC</td>\n",
-       "      <td>3204</td>\n",
-       "      <td>80.8</td>\n",
-       "      <td>119.6</td>\n",
-       "      <td>74.3</td>\n",
-       "      <td>16.5</td>\n",
-       "      <td>96.8</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2025-01-01 19:00:15</td>\n",
-       "      <td>b317e7ee-8af7-3e9c-3e0f-646395b8c81a</td>\n",
-       "      <td>Howard613</td>\n",
-       "      <td>Altenwerth646</td>\n",
-       "      <td>42</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2/58 JASPER ROAD</td>\n",
-       "      <td>BENTLEIGH</td>\n",
-       "      <td>VIC</td>\n",
-       "      <td>3204</td>\n",
-       "      <td>81.3</td>\n",
-       "      <td>120.2</td>\n",
-       "      <td>75.1</td>\n",
-       "      <td>16.9</td>\n",
-       "      <td>96.9</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2025-01-01 19:00:20</td>\n",
-       "      <td>b317e7ee-8af7-3e9c-3e0f-646395b8c81a</td>\n",
-       "      <td>Howard613</td>\n",
-       "      <td>Altenwerth646</td>\n",
-       "      <td>42</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2/58 JASPER ROAD</td>\n",
-       "      <td>BENTLEIGH</td>\n",
-       "      <td>VIC</td>\n",
-       "      <td>3204</td>\n",
-       "      <td>79.9</td>\n",
-       "      <td>118.2</td>\n",
-       "      <td>75.9</td>\n",
-       "      <td>16.3</td>\n",
-       "      <td>97.2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             timestamp                            patient_id first_name  \\\n",
-       "0  2025-01-01 19:00:00  b317e7ee-8af7-3e9c-3e0f-646395b8c81a  Howard613   \n",
-       "1  2025-01-01 19:00:05  b317e7ee-8af7-3e9c-3e0f-646395b8c81a  Howard613   \n",
-       "2  2025-01-01 19:00:10  b317e7ee-8af7-3e9c-3e0f-646395b8c81a  Howard613   \n",
-       "3  2025-01-01 19:00:15  b317e7ee-8af7-3e9c-3e0f-646395b8c81a  Howard613   \n",
-       "4  2025-01-01 19:00:20  b317e7ee-8af7-3e9c-3e0f-646395b8c81a  Howard613   \n",
-       "\n",
-       "       last_name  age gender           address       city state  postcode  \\\n",
-       "0  Altenwerth646   42      M  2/58 JASPER ROAD  BENTLEIGH   VIC      3204   \n",
-       "1  Altenwerth646   42      M  2/58 JASPER ROAD  BENTLEIGH   VIC      3204   \n",
-       "2  Altenwerth646   42      M  2/58 JASPER ROAD  BENTLEIGH   VIC      3204   \n",
-       "3  Altenwerth646   42      M  2/58 JASPER ROAD  BENTLEIGH   VIC      3204   \n",
-       "4  Altenwerth646   42      M  2/58 JASPER ROAD  BENTLEIGH   VIC      3204   \n",
-       "\n",
-       "   diastolic_bp  systolic_bp  heart_rate  respiratory_rate  oxygen_saturation  \\\n",
-       "0          79.9        118.3        74.4              17.1               98.6   \n",
-       "1          79.2        119.0        75.8              16.0               96.0   \n",
-       "2          80.8        119.6        74.3              16.5               96.8   \n",
-       "3          81.3        120.2        75.1              16.9               96.9   \n",
-       "4          79.9        118.2        75.9              16.3               97.2   \n",
-       "\n",
-       "   state_label  \n",
-       "0            0  \n",
-       "1            0  \n",
-       "2            0  \n",
-       "3            0  \n",
-       "4            0  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -246,26 +80,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "9549963     0\n",
-       "4638799     0\n",
-       "1987395     0\n",
-       "11995327    1\n",
-       "2729804     1\n",
-       "Name: state_label, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age                    int64\n",
+      "gender                object\n",
+      "diastolic_bp         float64\n",
+      "systolic_bp          float64\n",
+      "heart_rate           float64\n",
+      "respiratory_rate     float64\n",
+      "oxygen_saturation    float64\n",
+      "dtype: object\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "training_features = X_train[\n",
+    "    [\n",
+    "        'age',\n",
+    "        'gender',\n",
+    "        'diastolic_bp',\n",
+    "        'systolic_bp',\n",
+    "        'heart_rate',\n",
+    "        'respiratory_rate',\n",
+    "        'oxygen_saturation'\n",
+    "    ]\n",
+    "]\n",
+    "\n",
+    "# Display the data types of the selected columns\n",
+    "print(training_features.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Define numeric and categorical features\n",
+    "numeric_features = ['age', 'diastolic_bp', 'systolic_bp', 'heart_rate', 'respiratory_rate', 'oxygen_saturation']\n",
+    "categorical_features = ['gender']\n",
+    "\n",
+    "# Step 3: Preprocessing\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', Pipeline([\n",
+    "            ('imputer', SimpleImputer(strategy='median')),  # Handle missing numeric values\n",
+    "            ('scaler', StandardScaler())  # Standardize numeric data\n",
+    "        ]), numeric_features),\n",
+    "        \n",
+    "        ('cat', Pipeline([\n",
+    "            ('imputer', SimpleImputer(strategy='most_frequent')),  # Handle missing categorical values\n",
+    "            ('onehot', OneHotEncoder(drop='if_binary'))  # Encode binary categorical columns\n",
+    "        ]), categorical_features)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Step 4: Define models (lightweight and quick to train)\n",
+    "models = {\n",
+    "    'Dummy Classifier': DummyClassifier(strategy='most_frequent'),\n",
+    "    'Logistic Regression': LogisticRegression(),\n",
+    "    'SVM': SVC(),\n",
+    "    # 'MLP': MLPClassifier(hidden_layer_sizes=(32,), max_iter=200),  # Small hidden layer, quick training\n",
+    "    'Decision Tree': DecisionTreeClassifier(),\n",
+    "    # 'KNN': KNeighborsClassifier(n_neighbors=5)  # Default is 5 neighbors\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 5: Train models and evaluate\n",
+    "results = []\n",
+    "\n",
+    "for model_name, model in models.items():\n",
+    "    # Create a pipeline for each model\n",
+    "    pipeline = Pipeline([\n",
+    "        ('preprocessor', preprocessor),\n",
+    "        ('model', model)\n",
+    "    ])\n",
+    "    \n",
+    "    # Train the model\n",
+    "    pipeline.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Predict on the validation set\n",
+    "    y_pred = pipeline.predict(X_val)\n",
+    "    \n",
+    "    # Calculate evaluation metrics\n",
+    "    accuracy = accuracy_score(y_val, y_pred)\n",
+    "    f1 = f1_score(y_val, y_pred, average='weighted')\n",
+    "    precision = precision_score(y_val, y_pred, average='weighted')\n",
+    "    recall = recall_score(y_val, y_pred, average='weighted')\n",
+    "    \n",
+    "    # Store results\n",
+    "    results.append({\n",
+    "        'Model': model_name,\n",
+    "        'Accuracy': accuracy,\n",
+    "        'F1 Score': f1,\n",
+    "        'Precision': precision,\n",
+    "        'Recall': recall\n",
+    "    })\n",
+    "\n",
+    "# Step 6: Convert results to a DataFrame\n",
+    "results_df = pd.DataFrame(results)\n",
+    "print(\"\\nModel Performance Metrics:\")\n",
+    "print(results_df)\n",
+    "\n",
+    "# Step 7: Plot the metrics\n",
+    "metrics_to_plot = ['Accuracy', 'F1 Score', 'Precision', 'Recall']\n",
+    "\n",
+    "for metric in metrics_to_plot:\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    plt.bar(results_df['Model'], results_df[metric], color='skyblue')\n",
+    "    plt.title(f'Model Comparison: {metric}')\n",
+    "    plt.ylabel(metric)\n",
+    "    plt.xlabel('Model')\n",
+    "    plt.ylim(0, 1)\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.show()"
+   ]
   },
   {
    "cell_type": "code",
