--- a/BEGINNER/dnn_test.ipynb
+++ b/BEGINNER/dnn_test.ipynb
@@ -87,6 +87,8 @@
     "from sklearn.model_selection import train_test_split \n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "pd.set_option('display.max_rows', 100)\n",
+    "\n",
     "\n",
     "\n",
     "# Some display settings for nicer graphs\n",
@@ -106,13 +108,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'patient_id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 107\u001b[0m\n\u001b[1;32m    103\u001b[0m         y \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mSeries(LabelEncoder()\u001b[39m.\u001b[39mfit_transform(df[\u001b[39m'\u001b[39m\u001b[39mstate_label\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[1;32m    105\u001b[0m     \u001b[39mreturn\u001b[39;00m X, y, df\n\u001b[0;32m--> 107\u001b[0m X_train, y_train, train_df\u001b[39m=\u001b[39m convert_df(train_df)\n\u001b[1;32m    108\u001b[0m fc \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mdiastolic_bp\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39msystolic_bp\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m    109\u001b[0m        \u001b[39m'\u001b[39m\u001b[39mheart_rate\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrespiratory_rate\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39moxygen_saturation\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mgender_encoded\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m    110\u001b[0m        \u001b[39m'\u001b[39m\u001b[39mheart_rate_diff1\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39msystolic_bp_diff1\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mdiastolic_bp_diff1\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    129\u001b[0m        \u001b[39m'\u001b[39m\u001b[39moxygen_delivery_diff3\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mpulse_pressure_diff3\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m    130\u001b[0m        \u001b[39m'\u001b[39m\u001b[39mmean_arterial_pressure_diff3\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrate_pressure_product_diff3\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "Cell \u001b[0;32mIn[2], line 21\u001b[0m, in \u001b[0;36mconvert_df\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[39m# Create lags\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[39mfor\u001b[39;00m feature \u001b[39min\u001b[39;00m lag_features:\n\u001b[0;32m---> 21\u001b[0m     df[\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mfeature\u001b[39m}\u001b[39;00m\u001b[39m_lag1\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mgroupby(\u001b[39m'\u001b[39m\u001b[39mpatient_id\u001b[39m\u001b[39m'\u001b[39m)[feature]\u001b[39m.\u001b[39mshift(\u001b[39m1\u001b[39m)\n\u001b[1;32m     22\u001b[0m     df[\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mfeature\u001b[39m}\u001b[39;00m\u001b[39m_lag2\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mgroupby(\u001b[39m'\u001b[39m\u001b[39mpatient_id\u001b[39m\u001b[39m'\u001b[39m)[feature]\u001b[39m.\u001b[39mshift(\u001b[39m2\u001b[39m)\n\u001b[1;32m     23\u001b[0m     df[\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mfeature\u001b[39m}\u001b[39;00m\u001b[39m_lag5\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mgroupby(\u001b[39m'\u001b[39m\u001b[39mpatient_id\u001b[39m\u001b[39m'\u001b[39m)[feature]\u001b[39m.\u001b[39mshift(\u001b[39m5\u001b[39m)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py:8869\u001b[0m, in \u001b[0;36mDataFrame.groupby\u001b[0;34m(self, by, axis, level, as_index, sort, group_keys, observed, dropna)\u001b[0m\n\u001b[1;32m   8866\u001b[0m \u001b[39mif\u001b[39;00m level \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m by \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   8867\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mYou have to supply one of \u001b[39m\u001b[39m'\u001b[39m\u001b[39mby\u001b[39m\u001b[39m'\u001b[39m\u001b[39m and \u001b[39m\u001b[39m'\u001b[39m\u001b[39mlevel\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m-> 8869\u001b[0m \u001b[39mreturn\u001b[39;00m DataFrameGroupBy(\n\u001b[1;32m   8870\u001b[0m     obj\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m,\n\u001b[1;32m   8871\u001b[0m     keys\u001b[39m=\u001b[39mby,\n\u001b[1;32m   8872\u001b[0m     axis\u001b[39m=\u001b[39maxis,\n\u001b[1;32m   8873\u001b[0m     level\u001b[39m=\u001b[39mlevel,\n\u001b[1;32m   8874\u001b[0m     as_index\u001b[39m=\u001b[39mas_index,\n\u001b[1;32m   8875\u001b[0m     sort\u001b[39m=\u001b[39msort,\n\u001b[1;32m   8876\u001b[0m     group_keys\u001b[39m=\u001b[39mgroup_keys,\n\u001b[1;32m   8877\u001b[0m     observed\u001b[39m=\u001b[39mobserved,\n\u001b[1;32m   8878\u001b[0m     dropna\u001b[39m=\u001b[39mdropna,\n\u001b[1;32m   8879\u001b[0m )\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/groupby/groupby.py:1278\u001b[0m, in \u001b[0;36mGroupBy.__init__\u001b[0;34m(self, obj, keys, axis, level, grouper, exclusions, selection, as_index, sort, group_keys, observed, dropna)\u001b[0m\n\u001b[1;32m   1275\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdropna \u001b[39m=\u001b[39m dropna\n\u001b[1;32m   1277\u001b[0m \u001b[39mif\u001b[39;00m grouper \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 1278\u001b[0m     grouper, exclusions, obj \u001b[39m=\u001b[39m get_grouper(\n\u001b[1;32m   1279\u001b[0m         obj,\n\u001b[1;32m   1280\u001b[0m         keys,\n\u001b[1;32m   1281\u001b[0m         axis\u001b[39m=\u001b[39maxis,\n\u001b[1;32m   1282\u001b[0m         level\u001b[39m=\u001b[39mlevel,\n\u001b[1;32m   1283\u001b[0m         sort\u001b[39m=\u001b[39msort,\n\u001b[1;32m   1284\u001b[0m         observed\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m \u001b[39mif\u001b[39;00m observed \u001b[39mis\u001b[39;00m lib\u001b[39m.\u001b[39mno_default \u001b[39melse\u001b[39;00m observed,\n\u001b[1;32m   1285\u001b[0m         dropna\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdropna,\n\u001b[1;32m   1286\u001b[0m     )\n\u001b[1;32m   1288\u001b[0m \u001b[39mif\u001b[39;00m observed \u001b[39mis\u001b[39;00m lib\u001b[39m.\u001b[39mno_default:\n\u001b[1;32m   1289\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39many\u001b[39m(ping\u001b[39m.\u001b[39m_passed_categorical \u001b[39mfor\u001b[39;00m ping \u001b[39min\u001b[39;00m grouper\u001b[39m.\u001b[39mgroupings):\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/groupby/grouper.py:1009\u001b[0m, in \u001b[0;36mget_grouper\u001b[0;34m(obj, key, axis, level, sort, observed, validate, dropna)\u001b[0m\n\u001b[1;32m   1007\u001b[0m         in_axis, level, gpr \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m, gpr, \u001b[39mNone\u001b[39;00m\n\u001b[1;32m   1008\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1009\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(gpr)\n\u001b[1;32m   1010\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(gpr, Grouper) \u001b[39mand\u001b[39;00m gpr\u001b[39m.\u001b[39mkey \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   1011\u001b[0m     \u001b[39m# Add key to exclusions\u001b[39;00m\n\u001b[1;32m   1012\u001b[0m     exclusions\u001b[39m.\u001b[39madd(gpr\u001b[39m.\u001b[39mkey)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'patient_id'"
+     ]
+    }
+   ],
    "source": [
     "feature_columns = ['age', 'diastolic_bp', 'systolic_bp', 'heart_rate',\n",
     "                  'respiratory_rate', 'oxygen_saturation']\n",
     "def convert_df(df):\n",
+    "    columns_to_drop = ['timestamp', 'patient_id', 'first_name', 'last_name', \n",
+    "                   'address', 'city', 'state', 'postcode']\n",
+    "\n",
+    "    # Drop the columns from the DataFrame\n",
+    "    df = df.drop(columns=columns_to_drop)\n",
+    "\n",
     "    feature_columns = ['age', 'diastolic_bp', 'systolic_bp', 'heart_rate',\n",
     "                  'respiratory_rate', 'oxygen_saturation']\n",
     "    # Encode gender\n",
@@ -194,28 +218,55 @@
     "    return X, y, df\n",
     "\n",
     "\n",
-    "def simple_preprocess(df, target_column='state_label', test_size=0.2, random_state=42):\n",
-    "    # 1. Handle missing values using backward fill (as you've done in convert_df)\n",
-    "    df = df.fillna(method='bfill')  # Backward fill if any remaining NaN values\n",
-    "    \n",
-    "    # 2. Scale the features (excluding the target column) while preserving outliers\n",
-    "    scaler = StandardScaler()\n",
-    "    features = [col for col in df.columns if col != target_column]  # Exclude the target column\n",
-    "    df[features] = scaler.fit_transform(df[features])  # Apply scaling\n",
-    "    \n",
-    "    # 3. Split the data into features and target\n",
-    "    X = df[features]  # Features\n",
-    "    y = df[target_column]  # Target\n",
-    "    \n",
-    "    # Split into training and validation sets\n",
-    "    X_train, X_val, y_train, y_val = train_test_split(\n",
-    "        X, y, test_size=test_size, random_state=random_state, stratify=y\n",
-    "    )\n",
-    "    \n",
-    "    return X_train, X_val, y_train, y_val, scaler, features\n",
+    "def simple_preprocess(df, feature_columns, target_column='state_label', test_size=0.2, random_state=420):\n",
+    "    # 1. Handle missing values using backward fill (if any NaN values remain)\n",
+    "    df = df.fillna(method='bfill')\n",
     "\n",
-    "X_train, y_train, train_df = convert_df(train_df)\n",
-    "X_train, X_val, y_train, y_val, scaler, features = simple_preprocess(train_df, target_column='state_label')"
+    "    # 3. Scale the features while preserving outliers\n",
+    "    scaler = StandardScaler()\n",
+    "    df[feature_columns] = scaler.fit_transform(df[feature_columns])  # Apply scaling\n",
+    "\n",
+    "    # 4. Prepare X and y\n",
+    "    X = df[feature_columns, 'age', 'timestamp', 'patient_id']\n",
+    "    y = None\n",
+    "    if target_column in df:\n",
+    "        y = pd.Series(LabelEncoder().fit_transform(df['state_label']))\n",
+    "\n",
+    "    return X, y, df\n",
+    "\n",
+    "X_train, y_train, train_df= convert_df(train_df)\n",
+    "fc = ['diastolic_bp', 'systolic_bp',\n",
+    "       'heart_rate', 'respiratory_rate', 'oxygen_saturation', 'gender_encoded',\n",
+    "       'heart_rate_diff1', 'systolic_bp_diff1', 'diastolic_bp_diff1',\n",
+    "       'heart_rate_diff2', 'systolic_bp_diff2', 'diastolic_bp_diff2',\n",
+    "       'heart_rate_diff5', 'systolic_bp_diff5', 'diastolic_bp_diff5',\n",
+    "       'heart_rate_diff10', 'systolic_bp_diff10', 'diastolic_bp_diff10',\n",
+    "       'heart_rate_lag1', 'systolic_bp_lag1', 'diastolic_bp_lag1',\n",
+    "       'heart_rate_lag2', 'systolic_bp_lag2', 'diastolic_bp_lag2',\n",
+    "       'heart_rate_lag5', 'systolic_bp_lag5', 'diastolic_bp_lag5',\n",
+    "       'heart_rate_lag10', 'systolic_bp_lag10', 'diastolic_bp_lag10',\n",
+    "       'oxygen_delivery', 'pulse_pressure', 'mean_arterial_pressure',\n",
+    "       'rate_pressure_product', 'oxygen_delivery_lag1', 'pulse_pressure_lag1',\n",
+    "       'mean_arterial_pressure_lag1', 'rate_pressure_product_lag1',\n",
+    "       'oxygen_delivery_lag2', 'pulse_pressure_lag2',\n",
+    "       'mean_arterial_pressure_lag2', 'rate_pressure_product_lag2',\n",
+    "       'oxygen_delivery_lag3', 'pulse_pressure_lag3',\n",
+    "       'mean_arterial_pressure_lag3', 'rate_pressure_product_lag3',\n",
+    "       'oxygen_delivery_diff1', 'pulse_pressure_diff1',\n",
+    "       'mean_arterial_pressure_diff1', 'rate_pressure_product_diff1',\n",
+    "       'oxygen_delivery_diff2', 'pulse_pressure_diff2',\n",
+    "       'mean_arterial_pressure_diff2', 'rate_pressure_product_diff2',\n",
+    "       'oxygen_delivery_diff3', 'pulse_pressure_diff3',\n",
+    "       'mean_arterial_pressure_diff3', 'rate_pressure_product_diff3']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#X_train, y_train, train_df = simple_preprocess(train_df, fc)"
    ]
   },
   {
@@ -287,54 +338,53 @@
     "from tensorflow.keras.layers import Dense, Dropout, BatchNormalization\n",
     "from tensorflow.keras import regularizers\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "\n",
-    "# Model Definition\n",
-    "model = Sequential()\n",
+    "def create_model(input_shape, num_classes):\n",
+    "    model = Sequential([\n",
+    "        # Input Layer\n",
+    "        Dense(128, activation='selu', input_shape=input_shape,\n",
+    "              kernel_regularizer=regularizers.l2(0.001),\n",
+    "              kernel_initializer='lecun_normal'),\n",
+    "        BatchNormalization(),\n",
+    "        Dropout(0.2),\n",
+    "        \n",
+    "        # Hidden Layer\n",
+    "        Dense(64, activation='selu',\n",
+    "              kernel_regularizer=regularizers.l2(0.001),\n",
+    "              kernel_initializer='lecun_normal'),\n",
+    "        BatchNormalization(),\n",
+    "        Dropout(0.2),\n",
+    "        \n",
+    "        # Output Layer\n",
+    "        Dense(num_classes, activation='softmax')\n",
+    "    ])\n",
+    "    \n",
+    "    optimizer = Adam(learning_rate=0.001)\n",
+    "    model.compile(\n",
+    "        optimizer=optimizer,\n",
+    "        loss='categorical_crossentropy',\n",
+    "        metrics=['accuracy']\n",
+    "    )\n",
+    "    \n",
+    "    return model\n",
     "\n",
-    "# Input Layer with L2 Regularization and Batch Normalization\n",
-    "model.add(Dense(64, activation='relu', input_shape=(X_train.shape[1],),\n",
-    "                kernel_regularizer=regularizers.l2(0.01)))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Dropout(0.3))\n",
-    "\n",
-    "# Hidden Layer 2\n",
-    "model.add(Dense(64, activation='relu', kernel_regularizer=regularizers.l2(0.01)))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Dropout(0.3))\n",
-    "\n",
-    "# Hidden Layer 3\n",
-    "model.add(Dense(64, activation='relu', kernel_regularizer=regularizers.l2(0.01)))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Dropout(0.3))\n",
-    "\n",
-    "# Output Layer for Multi-class Classification\n",
-    "model.add(Dense(num_classes, activation='softmax'))\n",
-    "\n",
-    "# Compile the Model\n",
-    "model.compile(\n",
-    "    optimizer='adam',\n",
-    "    loss='categorical_crossentropy',\n",
-    "    metrics=['accuracy']\n",
-    ")\n",
-    "\n",
-    "# Callbacks\n",
-    "early_stopping = EarlyStopping(\n",
-    "    monitor='val_loss',\n",
-    "    patience=5,  # Stop after 5 epochs of no improvement\n",
-    "    restore_best_weights=True,  # Roll back to the best weights\n",
-    "    verbose=1\n",
-    ")\n",
-    "\n",
-    "reduce_lr = ReduceLROnPlateau(\n",
-    "    monitor='val_loss',\n",
-    "    factor=0.5,  # Reduce the learning rate by half\n",
-    "    patience=3,  # Wait for 3 epochs of no improvement\n",
-    "    min_lr=1e-5,  # Set a lower bound on the learning rate\n",
-    "    verbose=1\n",
-    ")\n",
-    "\n",
-    "# Summary of the Model\n",
-    "model.summary()"
+    "# Simpler callbacks\n",
+    "callbacks = [\n",
+    "    EarlyStopping(\n",
+    "        monitor='val_loss',\n",
+    "        patience=5,\n",
+    "        restore_best_weights=True,\n",
+    "        verbose=1\n",
+    "    ),\n",
+    "    ReduceLROnPlateau(\n",
+    "        monitor='val_loss',\n",
+    "        factor=0.2,\n",
+    "        patience=3,\n",
+    "        min_lr=1e-6,\n",
+    "        verbose=1\n",
+    "    )\n",
+    "]"
    ]
   },
   {
@@ -343,13 +393,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train the Model\n",
+    "model = create_model(input_shape=(X_train.shape[1],), num_classes=num_classes)\n",
     "history = model.fit(\n",
     "    X_train, y_train_encoded,\n",
-    "    validation_split=0.3,\n",
-    "    epochs=100,  # You can adjust this\n",
-    "    batch_size=128,  # You can experiment with different batch sizes\n",
-    "    callbacks=[early_stopping, reduce_lr]\n",
+    "    validation_data=(X_val, y_val),\n",
+    "    epochs=50,\n",
+    "    batch_size=32,\n",
+    "    callbacks=callbacks,\n",
+    "    verbose=1\n",
     ")"
    ]
   },
@@ -361,7 +412,6 @@
    "source": [
     "# Plotting training and validation performance\n",
     "plt.figure(figsize=(12, 4))\n",
-    "\n",
     "# Plot training and validation loss\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.plot(history.history['loss'], label='Training Loss')\n",
@@ -386,6 +436,8 @@
    "outputs": [],
    "source": [
     "X_test, y_test, test_df = convert_df(test_df)\n",
+    "#X_test, y_test, test_df = simple_preprocess(test_df, fc)\n",
+    "\n",
     "#  Extract the ID column from the test DataFrame\n",
     "ids = test_df['ID']\n",
     "# Remove the ID column to get only the 5 vital sign features (diastolic_bp, systolic_bp, heart_rate, respiratory_rate, oxygen_saturation)\n",
@@ -411,22 +463,6 @@
     "predictions_df.to_csv('predictions_trial.csv', index=False)\n",
     "print(\"Predictions saved to predictions.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
